Fix overflow

--- a/src/Game/Nokia.scss
+++ b/src/Game/Nokia.scss
@@ -168,6 +168,7 @@ body.dark {
       width: 106px;
       height: 78px;
       border-radius: 8px / 10px 10px 35px 35px;
+      overflow: hidden;
       border: 1px solid #000a;
       border-top: 2px solid #000a;
       box-shadow: 0 0 8px #000 inset, -4px 0 2px #fff8, 4px 0 2px #2228;
